--- a/cugbfightill/src/views/result.css
+++ b/cugbfightill/src/views/result.css
@@ -6,7 +6,7 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-image: url("../assets/img/0325_156.jpg");
+  background-image: url("../assets/img/0325_156.png");
   background-size: 100% auto;
   margin-right: 10px;
 }
