--- a/cugbfightill/src/assets/css/global.css
+++ b/cugbfightill/src/assets/css/global.css
@@ -8,4 +8,4 @@ body{
     -webkit-font-smoothing: antialiased;
    
 }
-a {  color: #20a5c6; text-decoration:none; }
+a {  color: #32abff; text-decoration:none; }
